//import "base/item_detail_infomation.proto";
import "protos/base/item_detail_infomation.proto";


//message OrderItem{
//    required string order_id = 1;
//    required float acutal_payment_price = 2;
//    repeated ItemDetail item_detail = 3;
//    optional string order_creation_time = 4;
//    optional string order_modify_time = 5;
//}
//
//message ShoppingCart{
//    required string id = 1;
//    required float acutal_payment_price = 2;
//    repeated ItemDetail item_detail = 3;
//}
//
//message ItemDetail{
//    required string item_ID = 1;
//    required uint32 buy_count = 2;
//    optional float item_each_price = 3;
//    optional bool item_is_available = 4;
//}

//order property
message ItemsInOrderInformation{
    required string item_id = 1;
    required string item_chinese_name = 2;
    required uint32 buy_count = 3;
    
    required ItemDetailInformation item_detail_info = 5;
    optional string item_small_pic = 6;
}

message ItemsInOrderCollection{
    repeated ItemsInOrderInformation items_collection = 1;
    required float total_price = 2;//remember rount 2 to save 2 decima same like mysql database include
}

message OrdersCollection{
    repeated ItemsInOrderCollection orders = 1;
}
